--- a/main.css
+++ b/main.css
@@ -1,60 +1,86 @@
-﻿header {
+﻿/* Quick notes about the CSS:
+    I did not center an image, but I did move mutiple elements arount the page. 
+    */
+
+
+header {
     background: url("imgs/headerbg.jpeg") no-repeat center fixed;
-    background-size: cover;    
-}
-#header{
-    padding-top: 2vh;
-    padding-bottom: 8vh;
-    
+    background-size: cover;
 }
 
-nav{
+#header {
+    padding-top: 2vh;
+    padding-bottom: 8vh;
+
+}
+
+nav {
     position: -webkit-sticky;
     position: sticky;
     top: 1vh;
 }
 
 nav ul {
-list-style-type: none;
-margin: 0;
-padding: 0;
-overflow: hidden;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 
-/*background-color: #beffaa;*/
 }
 
 nav li {
-float: right;
+    float: right;
 }
 
 nav li a {
-display: block;
-color: rgb(39, 100, 39);
-text-align: center;
-padding: 1em 1.2em;
-text-decoration: none;
+    display: block;
+    color: rgb(39, 100, 39);
+    text-align: center;
+    padding: 1em 1.2em;
+    text-decoration: none;
 }
 
 nav li a:hover {
-background-color: #69f055;
+    background-color: #69f055;
 }
 
-#logo{
+#logo {
     padding-left: 1%;
     width: 5%;
     float: left;
 }
 
-#top{
+#top {
     text-align: center;
     font-size: 5em;
     color: darkgreen;
 }
-footer{
+
+#content {
+    padding-bottom: 2.5rem;
+}
+
+#page {
+    position: relative;
+    min-height: 98vh;
+}
+
+footer {
     background-color: green;
     width: 100%;
-    left: 0px;
-    bottom: 0px;
+    height: 2.5rem;
+    bottom: 0;
     text-align: center;
-    position: fixed;
+    position: absolute;
+}
+
+
+
+.pics {
+    padding: .5%;
+    float: left;
+}
+
+.center {
+    text-align: center;
 }
