--- a/main.css
+++ b/main.css
@@ -1,4 +1,9 @@
-﻿/* Quick notes about the CSS:
+﻿/* William Scott
+    Due: 10/22
+    main.css */
+
+
+/* Quick notes about the CSS:
     I did not center an image, but I did move mutiple elements arount the page. 
     */
 
