--- a/main.css
+++ b/main.css
@@ -77,10 +77,12 @@ footer {
     text-align: center;
     position: absolute;
 }
-
-
-
-
+.socials{
+    padding-left: 5%;
+    padding-top: 0.25rem;
+    height: 2rem;
+    vertical-align: middle;
+}
 
 .center {
     text-align: center;
